@@ -1,29 +1,34 @@
 package dev.astralv2.command;
 
+import dev.astralv2.item.AstralItems;
 import dev.astralv2.stats.PlayerStats;
 import dev.astralv2.stats.PlayerStatsService;
 import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 /**
  * /astral コマンド（初期実装）
  * - /astral stats : 自分のステータス表示
+ * - /astral givecore : Astral Coreを受け取る（管理者向けデバッグ）
  */
 public final class AstralCommand implements TabExecutor {
 
     private static final String SUBCOMMAND_STATS = "stats";
+    private static final String SUBCOMMAND_GIVECORE = "givecore";
 
     private final PlayerStatsService playerStatsService;
+    private final AstralItems astralItems;
 
-    public AstralCommand(PlayerStatsService playerStatsService) {
+    public AstralCommand(PlayerStatsService playerStatsService, AstralItems astralItems) {
         this.playerStatsService = playerStatsService;
+        this.astralItems = astralItems;
     }
 
     @Override
@@ -33,11 +38,20 @@ public final class AstralCommand implements TabExecutor {
             return true;
         }
 
-        if (!SUBCOMMAND_STATS.equalsIgnoreCase(args[0])) {
-            sendUsage(sender, label);
-            return true;
+        String subCommand = args[0].toLowerCase();
+        if (SUBCOMMAND_STATS.equals(subCommand)) {
+            return handleStats(sender);
         }
 
+        if (SUBCOMMAND_GIVECORE.equals(subCommand)) {
+            return handleGiveCore(sender);
+        }
+
+        sendUsage(sender, label);
+        return true;
+    }
+
+    private boolean handleStats(CommandSender sender) {
         if (!(sender instanceof Player player)) {
             sender.sendMessage(ChatColor.RED + "このコマンドはプレイヤーのみ実行できます。");
             return true;
@@ -53,17 +67,39 @@ public final class AstralCommand implements TabExecutor {
         return true;
     }
 
+    private boolean handleGiveCore(CommandSender sender) {
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(ChatColor.RED + "このコマンドはプレイヤーのみ実行できます。");
+            return true;
+        }
+
+        if (!player.hasPermission("astral.admin")) {
+            player.sendMessage(ChatColor.RED + "このコマンドを実行する権限がありません。");
+            return true;
+        }
+
+        player.getInventory().addItem(astralItems.createAstralCore());
+        player.sendMessage(ChatColor.LIGHT_PURPLE + "Astral Core を1個付与しました。");
+        return true;
+    }
+
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
         if (args.length == 1) {
-            return SUBCOMMAND_STATS.startsWith(args[0].toLowerCase())
-                ? List.of(SUBCOMMAND_STATS)
-                : Collections.emptyList();
+            List<String> candidates = List.of(SUBCOMMAND_STATS, SUBCOMMAND_GIVECORE);
+            String typed = args[0].toLowerCase();
+            List<String> result = new ArrayList<>();
+            for (String candidate : candidates) {
+                if (candidate.startsWith(typed)) {
+                    result.add(candidate);
+                }
+            }
+            return result;
         }
         return Collections.emptyList();
     }
 
     private void sendUsage(CommandSender sender, String label) {
-        sender.sendMessage(ChatColor.YELLOW + "Usage: /" + label + " stats");
+        sender.sendMessage(ChatColor.YELLOW + "Usage: /" + label + " <stats|givecore>");
     }
 }
